# Mechanical_Simulation

./: CMakeLists.txt  README.txt  config_file.ini
cpps/: Connection.cpp  Object.cpp  Rect.cpp  Sphere.cpp  System.cpp  simulation.cpp
headers/: Connection.h  Object.h  Rect.h  Sphere.h  System.h
